69133 fix product slider horizontal align before slider script loaded

--- a/Snowdog_Components/components/Organisms/slider/_slider.scss
+++ b/Snowdog_Components/components/Organisms/slider/_slider.scss
@@ -38,6 +38,8 @@
 
         .slider__item {
             padding: $slider__item-padding--products;
+            flex-grow: 1;
+            flex-basis: 0;
 
             &:nth-child(n + 2) {
                 display: flex;
